@@ -5,24 +5,11 @@ Gradle
 
 https://help.aliyun.com/document_detail/131465.html
 
+```
 https://maven.aliyun.com/repository/central
 https://maven.aliyun.com/repository/jcenter
 https://maven.aliyun.com/repository/google
-
-## 设置代理
-
-在Gradle中build.gradle文件中group后面配置如下：
-
 ```
-System.setProperty("socksProxyHost","127.0.0.1")
-System.setProperty("socksProxyPort","1081")
-```
-
-修改GRADLE_HOME下的gradle.properties文件 (重启)
-```
-org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -DsocksProxyHost=127.0.0.1 -DsocksProxyPort=1081
-```
-
 ## BuildBootJar
 
 
@@ -58,9 +45,25 @@ implementation project(':mapdb')
 
 ## 代理
 
-PS: 试过各种方法，只有这个好用
+PS: macos 试过各种方法，只有这个好用
 
 ```
 ./gradlew -Dhttp.proxyHost=127.0.0.1 -Dhttp.proxyPort=1087 -Dhttps.proxyHost=127.0.0.1 -Dhttps.proxyPort=1087 installRelease
+```
+
+PS: windows下上面的方式不好用
+反而改配置文件好用
+`.gradle ❯ code gradle.properties`
+```
+systemProp.http.proxyHost=your_proxy_host
+systemProp.http.proxyPort=your_proxy_port
+systemProp.http.proxyUser=your_proxy_user
+systemProp.http.proxyPassword=your_proxy_password
+systemProp.https.proxyHost=your_proxy_host
+systemProp.https.proxyPort=your_proxy_port
+systemProp.https.proxyUser=your_proxy_user
+systemProp.https.proxyPassword=your_proxy_password
+systemProp.http.nonProxyHosts=*.nonproxyrepos.com|localhost
+systemProp.https.nonProxyHosts=*.nonproxyrepos.com|localhost
 ```
 
